--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -227,135 +227,10 @@ b {
 	animation-iteration-count: infinite;
 	cursor: pointer;
 }
-/*从上到下进入*/
-.fadeInDown {
-    animation-name: fadeInDown;
-    -webkit-animation: fadeInDown;
-}
-/*从下到上进入*/
-.fadeInUpLeft {
-    animation-name: fadeInUpLeft;
-    -webkit-animation: fadeInUpLeft;
-}
-/*从右到左进入*/
-.fadeInRight {
-    animation-name: fadeInRight;
-    -webkit-animation: fadeInRight;
-}
-/*从左到右进入*/
-.fadeInLeft {
-    animation-name: fadeInLeft;
-    -webkit-animation: fadeInLeft;
-}
-/*从上到下*/
-@keyframes fadeInDown
-{
-    from {
-        opacity: 0;
-        -webkit-transform: translate(0,-1000px); /* Safari */
-        transform: stranslate(0,-1000px); /* 标准语法 */
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(0,10px); /* Safari */
-        transform: stranslate(0,10px); /* 标准语法 */
-    }
-}
- 
-@-webkit-keyframes fadeInDown /* Safari 与 Chrome */
-{
-    from {
-        opacity:0;
-        -webkit-transform: translate(0,-1000px); /* Safari */
-        transform: stranslate(0,-1000px); /* 标准语法 */
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(0,10px); /* Safari */
-        transform: stranslate(0,10px); /* 标准语法 */
-    }
-}
-/*从左下到右上*/
-@keyframes fadeInUpLeft
-{
-    from {
-        opacity: 0;
-        -webkit-transform: translate(-1000px,1000px); /* Safari */
-        transform: stranslate(-1000px,1000px); /* 标准语法 */
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(0,10px); /* Safari */
-        transform: stranslate(0,10px); /* 标准语法 */
-    }
-}
- 
-@-webkit-keyframes fadeInUpLeft /* Safari 与 Chrome */
-{
-    from {
-        opacity:0;
-        -webkit-transform: translate(-1000px,1000px); /* Safari */
-        transform: stranslate(-1000px,1000px); /* 标准语法 */
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(0,10px); /* Safari */
-        transform: stranslate(0,10px); /* 标准语法 */
-    }
-}
-/*从右到左进入*/
-@keyframes fadeInRight
-{
-    from {
-        opacity: 0;
-        -webkit-transform: translate(1000px,0); 
-        transform: stranslate(1000px,0); 
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(10px,0); 
-        transform: stranslate(10px,0); 
-    }
-}
- 
-@-webkit-keyframes fadeInRight 
-{
-    from {
-        opacity:0;
-       -webkit-transform: translate(1000px,0); 
-        transform: stranslate(1000px,0); 
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(10px,0); 
-        transform: stranslate(10px,0); 
-    }
-}
-/*从左到右进入*/
-@keyframes fadeInLeft
-{
-    from {
-        opacity: 0;
-        -webkit-transform: translate(-1000px,0); 
-        transform: stranslate(-1000px,0); 
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(10px,0); 
-        transform: stranslate(10px,0); 
-    }
-}
- 
-@-webkit-keyframes fadeInLeft 
-{
-    from {
-        opacity:0;
-       -webkit-transform: translate(-1000px,0); 
-        transform: stranslate(-1000px,0); 
-    }
-    to {
-        opacity:1;
-        -webkit-transform: translate(10px,0); 
-        transform: stranslate(10px,0); 
-    }
+
+.secondTitle{
+  font-weight: bold;
+  color: #10386b;
+  font-size: 16px;
+  margin-top: 25px;
 }
